--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   toast: ^0.1.3
   banner_view: ^1.1.2
   dio: 2.1.0
+  shared_preferences: ^0.5.1+2
+  event_bus: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +52,7 @@ flutter:
 
   assets:
     - assets/images/welcome.jpg
+    - assets/images/logo.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
 
